edited for performance checking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,8 @@ set(LOG_TAG_AGG_UDL_LOAD_DOC_END 40221)
 set(LOG_TAG_AGG_UDL_RETRIEVE_DOC_END 40021)
 set(LOG_TAG_AGG_UDL_PUT_RESULT_START 40030)
 set(LOG_TAG_AGG_UDL_PUT_RESULT_END 40031)
+set(LOG_TAG_AGG_UDL_END 40100)
+
 
 add_library(aggregate_generate_udl SHARED 
             vortex_udls/aggregate_generate_udl.hpp 
@@ -169,6 +171,7 @@ target_compile_definitions(aggregate_generate_udl PRIVATE
     LOG_TAG_AGG_UDL_PUT_RESULT_END=${LOG_TAG_AGG_UDL_PUT_RESULT_END}
     ENABLE_VORTEX_EVALUATION_LOGGING=${ENABLE_VORTEX_EVALUATION_LOGGING}
     LOG_FAISS_SEARCH_BATCH_SIZE=${LOG_FAISS_SEARCH_BATCH_SIZE}
+    LOG_TAG_AGG_UDL_END=${LOG_TAG_AGG_UDL_END}
 )
 
 add_custom_command(TARGET aggregate_generate_udl POST_BUILD
