adding the web service to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,10 @@ find_package(Faiss REQUIRED)
 # Find CUDA Toolkit if using Faiss with GPU support
 find_package(CUDAToolkit REQUIRED)
 
+# Boost
+find_package(Boost REQUIRED COMPONENTS system filesystem)
+include_directories(${Boost_INCLUDE_DIRS})
+
 include(GNUInstallDirs)
 if (NOT DEFINED CMAKE_INSTALL_BINDIR)
     set(CMAKE_INSTALL_BINDIR bin)
@@ -63,6 +67,9 @@ target_compile_definitions(latency_client PRIVATE
     LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED=${LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED}
     ENABLE_VORTEX_EVALUATION_LOGGING=${ENABLE_VORTEX_EVALUATION_LOGGING}
 )
+
+add_executable(start_webservice webservice/start_webservice.cpp webservice/webservice.cpp)
+target_link_libraries(start_webservice ${Boost_LIBRARIES})
 
 set(UDL_COMMON_LIBS derecho derecho::cascade pthread faiss CUDA::cudart)
 
