--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,8 +64,8 @@ target_compile_definitions(latency_client PRIVATE
     LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED=${LOG_TAG_QUERIES_RESULT_CLIENT_RECEIVED}
 )
 
-add_executable(start_webservice webservice/start_webservice.cpp webservice/webservice.cpp)
-target_link_libraries(start_webservice ${Boost_LIBRARIES})
+add_executable(start_webservice webservice/start_webservice.cpp webservice/webservice.cpp webservice/vortex_webservice.cpp webservice/cascade_client.cpp)
+target_link_libraries(start_webservice ${Boost_LIBRARIES} derecho::cascade)
 
 set(UDL_COMMON_LIBS derecho derecho::cascade pthread faiss CUDA::cudart)
 
